--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible: Infraestrutura como código</li>
-        <li>Integração Contínua</li>
+        <li>Ansible: Sua infraestrutura como código</li>
+        <li>Integração Contínua: Maturidade e Produtividade no desenvolvimento de software</li>
         <li>Kubernetes: Introdução a orquestrção de sistemas</li>
     </ul>
 </body>
